@@ -1,15 +1,10 @@
 {
-  "count": 4875,
+  "count": 4857,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 57,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-07T00:00:00Z",
-      "count": 351,
+      "count": 283,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 246,
+      "count": 353,
       "uniques": 3
     }
   ]
